# todo-app-actix-example

todo-actix-example-client/: .gitignore  README.md  index.html  package-lock.json  package.json
todo-actix-example-server/: .env  .gitignore  Cargo.toml
todo-actix-example-server/migrations/2018-11-18-022902_create_todos/: down.sql  up.sql
todo-actix-example-server/src/: lib.rs  schema.rs
todo-actix-example-server/src/api/: all_todos.rs  context.rs  insert_todo.rs  mod.rs
todo-actix-example-server/src/api/todo/: mod.rs
todo-actix-example-server/src/domain/model/: todo.rs
todo-actix-example-server/src/domain/repository/: todo.rs
todo-actix-example-server/src/infrastructure/: mysql.rs
