[package]
name = "todo_actix_example_server"
version = "0.1.0"
authors = ["Yuki Toyoda <toyoda_yuki@cyberagent.co.jp>"]

[dependencies]
log = "0.4.0"
env_logger = "0.5.13"
actix = "0.7.6"
actix-web = "0.7.14"
serde_json = "1.0"
serde = "1.0.80"
serde_derive = "1.0"
futures = "0.1.25"
bytes = "0.4"
diesel = { version = "1.3.0", features = ["mysql", "chrono", "r2d2"] }
chrono = "0.4"
dotenv = "0.9.0"